fixed scrollbars on Windows

--- a/src/css/ui.css
+++ b/src/css/ui.css
@@ -479,7 +479,7 @@ input[data-type='array'] ~ .sub-options .array-action[data-action='add'],
   width: 550px;
   max-width: 98%;
   max-height: 90vh;
-  overflow: scroll;
+  overflow: auto;
   border-width: 0;
   border-radius: 5px;
   background-color: rgb(255, 255, 255);
